target/generated-sources/antlr4/caffeinatedParser.cpp

#include "wci/intermediate/TypeSpec.h"
using namespace wci::intermediate;


// Generated from caffeinated.g4 by ANTLR 4.7.2


#include "caffeinatedListener.h"

#include "caffeinatedParser.h"


using namespace antlrcpp;
using namespace antlr4;

caffeinatedParser::caffeinatedParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

caffeinatedParser::~caffeinatedParser() {
  delete _interpreter;
}

std::string caffeinatedParser::getGrammarFileName() const {
  return "caffeinated.g4";
}

const std::vector<std::string>& caffeinatedParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& caffeinatedParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

caffeinatedParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

caffeinatedParser::HeaderContext* caffeinatedParser::ProgramContext::header() {
  return getRuleContext<caffeinatedParser::HeaderContext>(0);
}

caffeinatedParser::MainBlockContext* caffeinatedParser::ProgramContext::mainBlock() {
  return getRuleContext<caffeinatedParser::MainBlockContext>(0);
}


size_t caffeinatedParser::ProgramContext::getRuleIndex() const {
  return caffeinatedParser::RuleProgram;
}

void caffeinatedParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void caffeinatedParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

caffeinatedParser::ProgramContext* caffeinatedParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, caffeinatedParser::RuleProgram);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(38);
    header();
    setState(39);
    mainBlock();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- HeaderContext ------------------------------------------------------------------

caffeinatedParser::HeaderContext::HeaderContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* caffeinatedParser::HeaderContext::PROGRAM() {
  return getToken(caffeinatedParser::PROGRAM, 0);
}

tree::TerminalNode* caffeinatedParser::HeaderContext::ID() {
  return getToken(caffeinatedParser::ID, 0);
}


size_t caffeinatedParser::HeaderContext::getRuleIndex() const {
  return caffeinatedParser::RuleHeader;
}

void caffeinatedParser::HeaderContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterHeader(this);
}

void caffeinatedParser::HeaderContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitHeader(this);
}

caffeinatedParser::HeaderContext* caffeinatedParser::header() {
  HeaderContext *_localctx = _tracker.createInstance<HeaderContext>(_ctx, getState());
  enterRule(_localctx, 2, caffeinatedParser::RuleHeader);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(41);
    match(caffeinatedParser::PROGRAM);
    setState(42);
    match(caffeinatedParser::ID);
    setState(43);
    match(caffeinatedParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MainBlockContext ------------------------------------------------------------------

caffeinatedParser::MainBlockContext::MainBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

caffeinatedParser::BlockContext* caffeinatedParser::MainBlockContext::block() {
  return getRuleContext<caffeinatedParser::BlockContext>(0);
}


size_t caffeinatedParser::MainBlockContext::getRuleIndex() const {
  return caffeinatedParser::RuleMainBlock;
}

void caffeinatedParser::MainBlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMainBlock(this);
}

void caffeinatedParser::MainBlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMainBlock(this);
}

caffeinatedParser::MainBlockContext* caffeinatedParser::mainBlock() {
  MainBlockContext *_localctx = _tracker.createInstance<MainBlockContext>(_ctx, getState());
  enterRule(_localctx, 4, caffeinatedParser::RuleMainBlock);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

caffeinatedParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

caffeinatedParser::DeclarationsContext* caffeinatedParser::BlockContext::declarations() {
  return getRuleContext<caffeinatedParser::DeclarationsContext>(0);
}

caffeinatedParser::CompoundStmtContext* caffeinatedParser::BlockContext::compoundStmt() {
  return getRuleContext<caffeinatedParser::CompoundStmtContext>(0);
}


size_t caffeinatedParser::BlockContext::getRuleIndex() const {
  return caffeinatedParser::RuleBlock;
}

void caffeinatedParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void caffeinatedParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}

caffeinatedParser::BlockContext* caffeinatedParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 6, caffeinatedParser::RuleBlock);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(47);
    declarations();
    setState(48);
    compoundStmt();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationsContext ------------------------------------------------------------------

caffeinatedParser::DeclarationsContext::DeclarationsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* caffeinatedParser::DeclarationsContext::VAR() {
  return getToken(caffeinatedParser::VAR, 0);
}

caffeinatedParser::DeclListContext* caffeinatedParser::DeclarationsContext::declList() {
  return getRuleContext<caffeinatedParser::DeclListContext>(0);
}


size_t caffeinatedParser::DeclarationsContext::getRuleIndex() const {
  return caffeinatedParser::RuleDeclarations;
}

void caffeinatedParser::DeclarationsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclarations(this);
}

void caffeinatedParser::DeclarationsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclarations(this);
}

caffeinatedParser::DeclarationsContext* caffeinatedParser::declarations() {
  DeclarationsContext *_localctx = _tracker.createInstance<DeclarationsContext>(_ctx, getState());
  enterRule(_localctx, 8, caffeinatedParser::RuleDeclarations);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(50);
    match(caffeinatedParser::VAR);
    setState(51);
    match(caffeinatedParser::T__1);
    setState(52);
    declList();
    setState(53);
    match(caffeinatedParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclListContext ------------------------------------------------------------------

caffeinatedParser::DeclListContext::DeclListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<caffeinatedParser::DeclContext *> caffeinatedParser::DeclListContext::decl() {
  return getRuleContexts<caffeinatedParser::DeclContext>();
}

caffeinatedParser::DeclContext* caffeinatedParser::DeclListContext::decl(size_t i) {
  return getRuleContext<caffeinatedParser::DeclContext>(i);
}


size_t caffeinatedParser::DeclListContext::getRuleIndex() const {
  return caffeinatedParser::RuleDeclList;
}

void caffeinatedParser::DeclListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclList(this);
}

void caffeinatedParser::DeclListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclList(this);
}

caffeinatedParser::DeclListContext* caffeinatedParser::declList() {
  DeclListContext *_localctx = _tracker.createInstance<DeclListContext>(_ctx, getState());
  enterRule(_localctx, 10, caffeinatedParser::RuleDeclList);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(55);
    decl();
    setState(60);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(56);
        match(caffeinatedParser::T__0);
        setState(57);
        decl(); 
      }
      setState(62);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

caffeinatedParser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

caffeinatedParser::VarListContext* caffeinatedParser::DeclContext::varList() {
  return getRuleContext<caffeinatedParser::VarListContext>(0);
}

caffeinatedParser::TypeIdContext* caffeinatedParser::DeclContext::typeId() {
  return getRuleContext<caffeinatedParser::TypeIdContext>(0);
}


size_t caffeinatedParser::DeclContext::getRuleIndex() const {
  return caffeinatedParser::RuleDecl;
}

void caffeinatedParser::DeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDecl(this);
}

void caffeinatedParser::DeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDecl(this);
}

caffeinatedParser::DeclContext* caffeinatedParser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 12, caffeinatedParser::RuleDecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63);
    varList();
    setState(64);
    match(caffeinatedParser::T__1);
    setState(65);
    typeId();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarListContext ------------------------------------------------------------------

caffeinatedParser::VarListContext::VarListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<caffeinatedParser::VarIdContext *> caffeinatedParser::VarListContext::varId() {
  return getRuleContexts<caffeinatedParser::VarIdContext>();
}

caffeinatedParser::VarIdContext* caffeinatedParser::VarListContext::varId(size_t i) {
  return getRuleContext<caffeinatedParser::VarIdContext>(i);
}


size_t caffeinatedParser::VarListContext::getRuleIndex() const {
  return caffeinatedParser::RuleVarList;
}

void caffeinatedParser::VarListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarList(this);
}

void caffeinatedParser::VarListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarList(this);
}

caffeinatedParser::VarListContext* caffeinatedParser::varList() {
  VarListContext *_localctx = _tracker.createInstance<VarListContext>(_ctx, getState());
  enterRule(_localctx, 14, caffeinatedParser::RuleVarList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(67);
    varId();
    setState(72);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == caffeinatedParser::T__2) {
      setState(68);
      match(caffeinatedParser::T__2);
      setState(69);
      varId();
      setState(74);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarIdContext ------------------------------------------------------------------

caffeinatedParser::VarIdContext::VarIdContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* caffeinatedParser::VarIdContext::ID() {
  return getToken(caffeinatedParser::ID, 0);
}


size_t caffeinatedParser::VarIdContext::getRuleIndex() const {
  return caffeinatedParser::RuleVarId;
}

void caffeinatedParser::VarIdContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarId(this);
}

void caffeinatedParser::VarIdContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarId(this);
}

caffeinatedParser::VarIdContext* caffeinatedParser::varId() {
  VarIdContext *_localctx = _tracker.createInstance<VarIdContext>(_ctx, getState());
  enterRule(_localctx, 16, caffeinatedParser::RuleVarId);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(75);
    match(caffeinatedParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeIdContext ------------------------------------------------------------------

caffeinatedParser::TypeIdContext::TypeIdContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* caffeinatedParser::TypeIdContext::Type_ID() {
  return getToken(caffeinatedParser::Type_ID, 0);
}


size_t caffeinatedParser::TypeIdContext::getRuleIndex() const {
  return caffeinatedParser::RuleTypeId;
}

void caffeinatedParser::TypeIdContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeId(this);
}

void caffeinatedParser::TypeIdContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeId(this);
}

caffeinatedParser::TypeIdContext* caffeinatedParser::typeId() {
  TypeIdContext *_localctx = _tracker.createInstance<TypeIdContext>(_ctx, getState());
  enterRule(_localctx, 18, caffeinatedParser::RuleTypeId);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(77);
    match(caffeinatedParser::Type_ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CompoundStmtContext ------------------------------------------------------------------

caffeinatedParser::CompoundStmtContext::CompoundStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* caffeinatedParser::CompoundStmtContext::BEGIN() {
  return getToken(caffeinatedParser::BEGIN, 0);
}

caffeinatedParser::StmtListContext* caffeinatedParser::CompoundStmtContext::stmtList() {
  return getRuleContext<caffeinatedParser::StmtListContext>(0);
}

tree::TerminalNode* caffeinatedParser::CompoundStmtContext::END() {
  return getToken(caffeinatedParser::END, 0);
}


size_t caffeinatedParser::CompoundStmtContext::getRuleIndex() const {
  return caffeinatedParser::RuleCompoundStmt;
}

void caffeinatedParser::CompoundStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompoundStmt(this);
}

void caffeinatedParser::CompoundStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompoundStmt(this);
}

caffeinatedParser::CompoundStmtContext* caffeinatedParser::compoundStmt() {
  CompoundStmtContext *_localctx = _tracker.createInstance<CompoundStmtContext>(_ctx, getState());
  enterRule(_localctx, 20, caffeinatedParser::RuleCompoundStmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79);
    match(caffeinatedParser::BEGIN);
    setState(80);
    stmtList();
    setState(81);
    match(caffeinatedParser::END);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

caffeinatedParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

caffeinatedParser::CompoundStmtContext* caffeinatedParser::StmtContext::compoundStmt() {
  return getRuleContext<caffeinatedParser::CompoundStmtContext>(0);
}

caffeinatedParser::AssignmentStmtContext* caffeinatedParser::StmtContext::assignmentStmt() {
  return getRuleContext<caffeinatedParser::AssignmentStmtContext>(0);
}

caffeinatedParser::If_statementContext* caffeinatedParser::StmtContext::if_statement() {
  return getRuleContext<caffeinatedParser::If_statementContext>(0);
}

caffeinatedParser::While_loopContext* caffeinatedParser::StmtContext::while_loop() {
  return getRuleContext<caffeinatedParser::While_loopContext>(0);
}


size_t caffeinatedParser::StmtContext::getRuleIndex() const {
  return caffeinatedParser::RuleStmt;
}

void caffeinatedParser::StmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmt(this);
}

void caffeinatedParser::StmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmt(this);
}

caffeinatedParser::StmtContext* caffeinatedParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 22, caffeinatedParser::RuleStmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(88);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case caffeinatedParser::BEGIN: {
        enterOuterAlt(_localctx, 1);
        setState(83);
        compoundStmt();
        break;
      }

      case caffeinatedParser::ID: {
        enterOuterAlt(_localctx, 2);
        setState(84);
        assignmentStmt();
        break;
      }

      case caffeinatedParser::IF: {
        enterOuterAlt(_localctx, 3);
        setState(85);
        if_statement();
        break;
      }

      case caffeinatedParser::WHILE: {
        enterOuterAlt(_localctx, 4);
        setState(86);
        while_loop();
        break;
      }

      case caffeinatedParser::T__0:
      case caffeinatedParser::END:
      case caffeinatedParser::COMPLETE: {
        enterOuterAlt(_localctx, 5);

        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtListContext ------------------------------------------------------------------

caffeinatedParser::StmtListContext::StmtListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<caffeinatedParser::StmtContext *> caffeinatedParser::StmtListContext::stmt() {
  return getRuleContexts<caffeinatedParser::StmtContext>();
}

caffeinatedParser::StmtContext* caffeinatedParser::StmtListContext::stmt(size_t i) {
  return getRuleContext<caffeinatedParser::StmtContext>(i);
}


size_t caffeinatedParser::StmtListContext::getRuleIndex() const {
  return caffeinatedParser::RuleStmtList;
}

void caffeinatedParser::StmtListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmtList(this);
}

void caffeinatedParser::StmtListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmtList(this);
}

caffeinatedParser::StmtListContext* caffeinatedParser::stmtList() {
  StmtListContext *_localctx = _tracker.createInstance<StmtListContext>(_ctx, getState());
  enterRule(_localctx, 24, caffeinatedParser::RuleStmtList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    stmt();
    setState(95);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == caffeinatedParser::T__0) {
      setState(91);
      match(caffeinatedParser::T__0);
      setState(92);
      stmt();
      setState(97);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentStmtContext ------------------------------------------------------------------

caffeinatedParser::AssignmentStmtContext::AssignmentStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

caffeinatedParser::VariableContext* caffeinatedParser::AssignmentStmtContext::variable() {
  return getRuleContext<caffeinatedParser::VariableContext>(0);
}

caffeinatedParser::ExprContext* caffeinatedParser::AssignmentStmtContext::expr() {
  return getRuleContext<caffeinatedParser::ExprContext>(0);
}


size_t caffeinatedParser::AssignmentStmtContext::getRuleIndex() const {
  return caffeinatedParser::RuleAssignmentStmt;
}

void caffeinatedParser::AssignmentStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignmentStmt(this);
}

void caffeinatedParser::AssignmentStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignmentStmt(this);
}

caffeinatedParser::AssignmentStmtContext* caffeinatedParser::assignmentStmt() {
  AssignmentStmtContext *_localctx = _tracker.createInstance<AssignmentStmtContext>(_ctx, getState());
  enterRule(_localctx, 26, caffeinatedParser::RuleAssignmentStmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(114);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(98);
      variable();
      setState(99);
      match(caffeinatedParser::T__3);
      setState(100);
      expr(0);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(102);
      variable();
      setState(103);
      match(caffeinatedParser::T__3);
      setState(104);
      match(caffeinatedParser::T__4);
      setState(105);
      expr(0);
      setState(106);
      match(caffeinatedParser::T__4);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(108);
      variable();
      setState(109);
      match(caffeinatedParser::T__3);
      setState(110);
      match(caffeinatedParser::T__5);
      setState(111);
      expr(0);
      setState(112);
      match(caffeinatedParser::T__5);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableContext ------------------------------------------------------------------

caffeinatedParser::VariableContext::VariableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* caffeinatedParser::VariableContext::ID() {
  return getToken(caffeinatedParser::ID, 0);
}


size_t caffeinatedParser::VariableContext::getRuleIndex() const {
  return caffeinatedParser::RuleVariable;
}

void caffeinatedParser::VariableContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVariable(this);
}

void caffeinatedParser::VariableContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVariable(this);
}

caffeinatedParser::VariableContext* caffeinatedParser::variable() {
  VariableContext *_localctx = _tracker.createInstance<VariableContext>(_ctx, getState());
  enterRule(_localctx, 28, caffeinatedParser::RuleVariable);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(116);
    match(caffeinatedParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

caffeinatedParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* caffeinatedParser::ExprContext::INTEGER() {
  return getToken(caffeinatedParser::INTEGER, 0);
}

tree::TerminalNode* caffeinatedParser::ExprContext::BOOLEAN() {
  return getToken(caffeinatedParser::BOOLEAN, 0);
}

tree::TerminalNode* caffeinatedParser::ExprContext::CHARACTER() {
  return getToken(caffeinatedParser::CHARACTER, 0);
}

tree::TerminalNode* caffeinatedParser::ExprContext::STRING() {
  return getToken(caffeinatedParser::STRING, 0);
}

caffeinatedParser::VariableContext* caffeinatedParser::ExprContext::variable() {
  return getRuleContext<caffeinatedParser::VariableContext>(0);
}

std::vector<caffeinatedParser::ExprContext *> caffeinatedParser::ExprContext::expr() {
  return getRuleContexts<caffeinatedParser::ExprContext>();
}

caffeinatedParser::ExprContext* caffeinatedParser::ExprContext::expr(size_t i) {
  return getRuleContext<caffeinatedParser::ExprContext>(i);
}

tree::TerminalNode* caffeinatedParser::ExprContext::Add() {
  return getToken(caffeinatedParser::Add, 0);
}

tree::TerminalNode* caffeinatedParser::ExprContext::Sub() {
  return getToken(caffeinatedParser::Sub, 0);
}
